--- a/.github/workflows/matrix-maven.yml
+++ b/.github/workflows/matrix-maven.yml
@@ -13,10 +13,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - name: Use JDK {{ matrix.jdk_version }}
+      - name: Use JDK ${{ matrix.jdk_version }}
         uses: actions/setup-java@v1
         with:
-          java-version: {{ matrix.jdk_version }}
+          java-version: ${{ matrix.jdk_version }}
 
       - name: Build with Maven
         run: |
