--- a/.github/workflows/matrix-maven.yml
+++ b/.github/workflows/matrix-maven.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        jdk_version: [1.8, 1.11]
+        jdk_version: [1.8, 1.11, 1.12]
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
@@ -18,7 +18,8 @@ jobs:
         with:
           java-version: ${{ matrix.jdk_version }}
 
-      - name: Build with Maven
+      - name: Build and Test, verify with Maven
         run: |
           mvn package --file pom.xml
+          mvn test
           mvn verify
