--- a/.github/workflows/matrix-maven.yml
+++ b/.github/workflows/matrix-maven.yml
@@ -18,8 +18,11 @@ jobs:
         with:
           java-version: ${{ matrix.jdk_version }}
 
-      - name: Maven package, test and verify
-        run: |
-          mvn package --file pom.xml
-          mvn test
-          mvn verify
+      - name: Maven package
+        run: mvn package --file pom.xml
+
+      - name: Maven test
+        run: mvn test
+
+      - name: Maven verify
+        run: mvn verify
